--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
 
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//DE">
+
+<html>
+
+<head>
+
+  <title>W.Brawl HOME</title>
+
+  
+
+  <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+
+<!-- Seiten Navigations Menu -->
+
+<ul class="navbar">
+
+  <li><a href="index.html">Startseite</a>
+
+  <li><a href="crosschat.html">GlobalChatBot</a>
+
+</ul>
+
+<!-- Inhaltsbereich -->
+
+<p>Hallo und willkommen auf der offiziellen Webseite von Screnz! 
+ <p>Hier geht es hauptsächlich um unsere bots!
+
+
+
+
+</body>
+
+</html>
+
+© 2020 GitHub, In
