--- a/crosschat.html
+++ b/crosschat.html
@@ -14,7 +14,22 @@
 </ul>
 
 <!-- Inhaltsbereich -->
-
+<p>§1 Nicht spammen!
+<p>§2 Keine links!
+<p>§3 Nicht Beleidigen!
+<p>§4 Keine commands!
+<p>§5 Keine Rassistischen inhalten!
+<p>§6 Keine pornografischen inhalte!
+<p>Banumgeung ist verboten!
+<p>---------------------------------------------------------------------------------
+<p>Bestrafungen:
+<p>1. Verwahrung
+<p>2. Verwahnung
+<p>3. Ban (3 tage)
+<p>4. Ban (7 tage)
+<p>5. Ban (10 tage)
+<p>6. Ban (1 Jahr)
+<p>7. Ban (permanent) 
 
 </body>
 </html>
