--- a/crosschat.html
+++ b/crosschat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//DE">
 <html>
 <head>
-  <title>W.Brawl HOME</title>
+  <title>Screnz globalchat regeln</title>
   
   <link rel="stylesheet" href="style.css">
 </head>
