--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <ul class="navbar">
 
   <li><a href="index.html">Startseite</a>
-
+  <li><a href="https://discordapp.com/oauth2/authorize?client_id=681172805324505228&permissions=8&scope=bot">Backup bot</a>
   <li><a href="crosschat.html">GlobalChatBot</a>
 
 </ul>
