--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- Seiten Navigations Menu -->
 
 <ul class="navbar">
-
+  <li><a href="https://discordapp.com/oauth2/authorize?client_id=682873584842047507&permissions=8&scope=bot">Musik bot</a>
   <li><a href="index.html">Startseite</a>
   <li><a href="https://discordapp.com/oauth2/authorize?client_id=681172805324505228&permissions=8&scope=bot">Backup bot</a>
   <li><a href="crosschat.html">GlobalChatBot</a>
