--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <li><a href="https://discordapp.com/oauth2/authorize?client_id=681570568902148104&permissions=8&scope=bot">GlobalChat</a>
   <li><a href="https://discordapp.com/oauth2/authorize?client_id=682873584842047507&permissions=8&scope=bot">Musik bot</a>
   <li><a href="https://discordapp.com/oauth2/authorize?client_id=681172805324505228&permissions=8&scope=bot">Backup bot</a>
-  <li><a href="crosschat.html">GlobalChatBot</a>
+  <li><a href="crosschat.html">GlobalChat Regeln</a>
 
 </ul>
 
