--- a/crosschat.html
+++ b/crosschat.html
@@ -18,7 +18,7 @@
 <p>§2 Keine links!
 <p>§3 Nicht Beleidigen!
 <p>§4 Keine commands!
-<p>§5 Keine Rassistischen inhalten!
+<p>§5 Keine Rassistischen inhalte!
 <p>§6 Keine pornografischen inhalte!
 <p>Banumgeung ist verboten!
 <p>---------------------------------------------------------------------------------
